--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory>
-        <SwitchPreference
-                android:title="@string/pref_title_recommendations"
-                android:defaultValue="true"
-                android:key="@string/pref_key_recommendations" />
-    </PreferenceCategory>
+<PreferenceScreen
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:title="Preference Example">
+
     <Preference
-            android:key="@string/pref_key_login"
-            android:title="@string/pref_title_login" />
+            android:key="basic_preference"
+            android:title="Example 1"
+            android:summary="Summary 1" />
+
 </PreferenceScreen>
