--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent">
     <fragment
             android:id="@+id/settingsFragment"
-            android:name="com.teamb.testbegin.ui.settings.SettingsFragment"
+            android:name="com.teamb.chzonk.ui.settings.SettingsFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </RelativeLayout>
