--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -2,12 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:fab="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+                android:id="@+id/reader_layout">
 
-    <androidx.viewpager.widget.ViewPager
+    <com.duolingo.open.rtlviewpager.RtlViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/viewPager"/>
+
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:alpha=".5">
@@ -29,12 +31,21 @@
                 android:layout_marginEnd="16dp">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/action_a"
+                android:id="@+id/action_a"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_colorNormal="@color/white"
+                fab:fab_title="Dual Page View"
+                android:src="@drawable/ic_filter_2_black_24dp"
+                fab:fab_colorPressed="@color/white_pressed"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/action_c"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     fab:fab_colorNormal="@color/white"
-                    fab:fab_title="Single Panel"
-                    android:src="@drawable/ic_filter_1_black_24dp"
+                    fab:fab_title="Hide Progress Bar"
+                    android:src="@drawable/ic_call_to_action_black_24dp"
                     fab:fab_colorPressed="@color/white_pressed"/>
 
             <com.getbase.floatingactionbutton.FloatingActionButton
@@ -42,25 +53,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     fab:fab_colorNormal="@color/white"
-                    fab:fab_title="Dual Panel"
-                    android:src="@drawable/ic_filter_2_black_24dp"
+                    fab:fab_title="Right to Left"
+                    android:src="@drawable/ic_chevron_left_black_24dp"
                     fab:fab_colorPressed="@color/white_pressed"/>
+
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
+        <ProgressBar
+                android:id="@+id/determinateBar"
+                android:layout_alignParentBottom="true"
+                android:paddingEnd="150dp"
+                android:paddingStart="150dp"
+                android:layout_margin="@dimen/dp_10"
+                style="@style/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
     </RelativeLayout>
 
-
-    <ProgressBar
-            android:alpha=".5"
-            android:id="@+id/determinateBar"
-            android:layout_alignParentBottom="true"
-            android:paddingEnd="150dp"
-            android:paddingStart="150dp"
-            android:layout_margin="@dimen/dp_10"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
 
 
