--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -11,8 +11,7 @@
             android:id="@+id/viewPager"/>
 
     <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:alpha=".5">
+                    android:layout_height="match_parent">
 
         <com.getbase.floatingactionbutton.FloatingActionsMenu
                 android:id="@+id/multiple_actions"
@@ -28,7 +27,8 @@
                 fab:fab_labelStyle="@style/menu_labels_style"
                 android:layout_marginBottom="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginEnd="16dp">
+                android:layout_marginEnd="16dp"
+                android:alpha=".5">
 
             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/action_a"
@@ -68,7 +68,8 @@
                 android:layout_margin="@dimen/dp_10"
                 style="@style/progressBarStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:alpha=".5"/>
 
 
     </RelativeLayout>
