Fixed UI and some logic in the refreshing drawable

--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -1,16 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="horizontal"
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:layout_width="wrap_content"
               android:layout_height="match_parent">
     <ImageView
-            android:layout_width="138dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
             android:src="@drawable/red_door_v2"
             android:id="@+id/comicImage"/>
     <LinearLayout
             android:orientation="vertical"
-            android:layout_width="307dp"
-            android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="595dp">
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -21,8 +21,8 @@
                 android:textSize="20sp"/>
         <TextView
                 android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="376dp"
+                android:layout_height="56dp"
                 android:inputType="text"
                 android:layout_marginTop="4dp"
                 android:layout_marginLeft="24dp"
