--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent"
                 android:id="@+id/reader_layout">
 
-    <com.duolingo.open.rtlviewpager.RtlViewPager
+    <com.booking.rtlviewpager.RtlViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/viewPager"/>
